--- a/app.json
+++ b/app.json
@@ -13,24 +13,25 @@
     "navigationBarTextStyle": "black"
   },
   "tabBar": {
+    "selectedColor": "#0F6BC0",
     "list": [
       {
         "pagePath": "pages/detect/index",
         "text": "认知检测",
         "iconPath": "assets/icon/a.png",
-        "selectIconPath": "assets/icon/a.png"
+        "selectedIconPath": "assets/icon/a_active.png"
       },
       {
         "pagePath": "pages/customize/index",
         "text": "定制课程",
         "iconPath": "assets/icon/c.png",
-        "selectIconPath": "assets/icon/c_active.png"
+        "selectedIconPath": "assets/icon/c_active.png"
       },
       {
         "pagePath": "pages/mycourse/index",
         "text": "我的课程",
         "iconPath": "assets/icon/b.png",
-        "selectIconPath": "assets/icon/b_active.png"
+        "selectedIconPath": "assets/icon/b_active.png"
       }
     ]
   },
