--- a/project.config.json
+++ b/project.config.json
@@ -14,7 +14,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.0.4",
-	"appid": "wxea8c424ab2ec7834",
+	"appid": "wx5339814510e6f070",
 	"projectname": "dc_app",
 	"debugOptions": {
 		"hidedInDevtools": []
