--- a/project.config.json
+++ b/project.config.json
@@ -14,8 +14,8 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.0.4",
-	"appid": "wx5339814510e6f070",
-	"projectname": "dc_app",
+	"appid": "wxe5eb2f345aa2c46e",
+	"projectname": "miniprogram-1",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
