--- a/app.json
+++ b/app.json
@@ -1,16 +1,17 @@
 {
   "pages": [
+    "pages/index/index",
+    "pages/detect/index",
     "pages/pay/index",
     "pages/exam/index",
     "pages/graph/index",
     "pages/cgrade/index",
-    "pages/index/index",
+    
     "pages/logs/logs",
     "pages/customize/index",
     "pages/mycourse/index",
-    "pages/gotoclass/index",
-    "pages/detect/index"
-  ],
+    "pages/gotoclass/index"
+    ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#4682B4",
