--- a/app.json
+++ b/app.json
@@ -11,7 +11,8 @@
     "pages/gotoclass/index",
     "pages/buycourse/index",
     "pages/coursedesign/index",
-    "pages/publicinfo/index"
+    "pages/publicinfo/index",
+    "pages/test/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
