--- a/project.config.json
+++ b/project.config.json
@@ -48,7 +48,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 6,
 			"list": [
 				{
 					"id": -1,
@@ -90,6 +90,12 @@
 					"name": "pages/exam/index",
 					"pathName": "pages/exam/index",
 					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/customize/index",
+					"pathName": "pages/customize/index",
 					"scene": null
 				}
 			]
