--- a/project.config.json
+++ b/project.config.json
@@ -48,7 +48,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 6,
+			"current": 7,
 			"list": [
 				{
 					"id": -1,
@@ -97,6 +97,12 @@
 					"name": "pages/detect/index",
 					"pathName": "pages/detect/index",
 					"query": "id=26&section=1.1集合",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/points/index",
+					"pathName": "pages/points/index",
 					"scene": null
 				}
 			]
