--- a/project.config.json
+++ b/project.config.json
@@ -48,7 +48,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 7,
+			"current": 8,
 			"list": [
 				{
 					"id": -1,
@@ -103,6 +103,14 @@
 					"id": -1,
 					"name": "pages/points/index",
 					"pathName": "pages/points/index",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/detectResult/index",
+					"pathName": "pages/detectResult/index",
+					"query": "hascustomize=true",
 					"scene": null
 				}
 			]
