--- a/project.config.json
+++ b/project.config.json
@@ -48,7 +48,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 11,
+			"current": 13,
 			"list": [
 				{
 					"id": -1,
@@ -131,6 +131,21 @@
 					"id": -1,
 					"name": "pages/grclassinfo/index",
 					"pathName": "pages/grclassinfo/index",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/customize/index",
+					"pathName": "pages/customize/index",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/pay/index",
+					"pathName": "pages/pay/index",
+					"query": "isGroup=1&courseId=17",
 					"scene": null
 				}
 			]
